Closed Bug 473268 Opened 16 years ago Closed 15 years ago

We should use forget instead of swap in mozStorageService.cpp

Categories

(Toolkit :: Storage, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: sdwilsh, Assigned: nilayvaish)

Details

Attachments

(1 file)

Whiteboard: [good first bug]
I am submitting a patch for this bug.
Assignee: nobody → nilayvaish
Status: NEW → ASSIGNED
Comment on attachment 356896 [details] [diff] [review]
Patch for changing swap to forget
[Checkin: Comment 3]

r=sdwilsh

Thanks!
Attachment #356896 - Flags: review+
Keywords: checkin-needed
Comment on attachment 356896 [details] [diff] [review]
Patch for changing swap to forget
[Checkin: Comment 3]


http://hg.mozilla.org/mozilla-central/rev/c23d77b0d600
Attachment #356896 - Attachment description: Patch for changing swap to forget → Patch for changing swap to forget [Checkin: Comment 3]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [good first bug]
Target Milestone: --- → mozilla1.9.2a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: