Bug 473268 - We should use forget instead of swap in mozStorageService.cpp; r=sdwilsh